--- a/build.gradle
+++ b/build.gradle
@@ -34,10 +34,10 @@ archivesBaseName = "magicOfRevolt"
 
 minecraft {
     version = config.mc_version + "-" + config.forge_version
-	if (file('../run').exists()) {
-		runDir = "../run1.8"
+	if (file('../run1.9').exists()) {
+		runDir = "../run1.9"
 	} else {
-		runDir = "run1.8"
+		runDir = "run1.9"
 	}
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -45,7 +45,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "stable_20"
+    mappings = "snapshot_20160312"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 	
 	replace '@VERSION@', project.version
