--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,7 @@
 #
 #Sat Dec 19 22:06:00 CET 2015
 version=0.1
-forge_version=11.15.1.1722
-mc_version=1.8.9
+forge_version=12.16.0.0
+mc_version=1.9
 build_number=0
+#Build 0 for the time being
